--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile project(':tagpreference')
+    compile project(':tagedittext')
 }
