--- a/tagedittext/build.gradle
+++ b/tagedittext/build.gradle
@@ -9,8 +9,6 @@ android {
         targetSdkVersion 25
         versionCode 2
         versionName "1.0.1"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -26,4 +24,8 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile "org.robolectric:robolectric:3.3.1"
+
+    // Tracking: https://github.com/robolectric/robolectric/issues/1932
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 }
